--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  /*display: flex;*/
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f8f8f8;
+  font-family: Arial, sans-serif;
+}
+.container {
+  text-align: center;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
