se agregan las diferentes pantallas y se usan componentes para el header y el nav

--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -12,7 +12,7 @@
       <input type="password" placeholder="Contraseña" required>
     </div>
     <a href="#" class="forgot-password">¿Olvidaste la contraseña?</a>
-    <button type="submit" class="signin-button">Iniciar Sesión</button>
+    <button type="submit" class="signin-button" (click)="navigateToHome()">Iniciar Sesión</button>
   </form>
   <div class="continue-with">
     <span class="line"></span>
