--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -1,9 +1,11 @@
+
 .logo img {
   width: 159px;
   height: 143px;
   margin-bottom: 20px;
   gap: 0;
 }
+
 .signin-title {
   font-size: 1.5em;
   margin-bottom: 10px;
@@ -21,7 +23,7 @@
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
-  padding-left: 40px; /* Espacio para el ícono */
+  /*padding-left: 40px; !* Espacio para el ícono *!*/
 }
 
 .input-group .input-email {
